syntax = "proto3";

package opd;

option go_package = "github.com/somnathbm/hospital-hms/microservices/opd-service/gen;opdpb";

service OPDService {
  rpc CheckAppointment(CheckAppointmentRequest) returns (CheckAppointmentResponse);
  rpc StartConsultation(StartConsultationRequest) returns (StartConsultationResponse);
  rpc RecordDiagnosis(RecordDiagnosisRequest) returns (RecordDiagnosisResponse);
  rpc PrescribeTests(PrescribeTestsRequest) returns (PrescribeTestsResponse);
  rpc GeneratePrescription(GeneratePrescriptionRequest) returns (GeneratePrescriptionResponse);
  rpc EndVisit(EndVisitRequest) returns (EndVisitResponse);
}

message CheckAppointmentRequest {
  string patient_id = 1;
  string appointment_id = 2;
}

message CheckAppointmentResponse {
  bool valid = 1;
  string message = 2;
}

message StartConsultationRequest {
  string patient_id = 1;
  string doctor_id = 2;
  string appointment_id = 3;
}

message StartConsultationResponse {
  string visit_id = 1;
  string message = 2;
}

message RecordDiagnosisRequest {
  string visit_id = 1;
  string diagnosis = 2;
}

message RecordDiagnosisResponse {
  string message = 1;
}

message PrescribeTestsRequest {
  string visit_id = 1;
  repeated string test_names = 2;
}

message PrescribeTestsResponse {
  string message = 1;
}

message GeneratePrescriptionRequest {
  string visit_id = 1;
  repeated string medicines = 2;
}

message GeneratePrescriptionResponse {
  string prescription_id = 1;
  string message = 2;
}

message EndVisitRequest {
  string patient_id = 1;
  string visit_id = 2;
}

message EndVisitResponse {
  string bill_id = 1;
  string message = 2;
}
